{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 244,
  "lineage": "14cd063d-c850-0db1-9762-ef448314cf30",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:338889389996:subnet/subnet-0c250ab111711cea2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "172.31.16.0/20",
            "id": "subnet-0c250ab111711cea2",
            "map_public_ip_on_launch": true,
            "owner_id": "338889389996",
            "tags": {
              "Name": "Default subnet for eu-north-1a"
            },
            "vpc_id": "vpc-09c7024c188c31005"
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:338889389996:subnet/subnet-07e818efc47ead25e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "172.31.32.0/20",
            "id": "subnet-07e818efc47ead25e",
            "map_public_ip_on_launch": true,
            "owner_id": "338889389996",
            "tags": {
              "Name": "Default subnet for eu-north-1b"
            },
            "vpc_id": "vpc-09c7024c188c31005"
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:338889389996:loadbalancer/webserver-ha-lb",
            "availability_zones": [
              "eu-north-1a",
              "eu-north-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "webserver-ha-lb-1050678788.eu-north-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "webserver-ha-lb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "webserver-ha-lb",
            "security_groups": [
              "sg-0aff0c4cf31e999f0"
            ],
            "source_security_group": "338889389996/wp-sec-group",
            "source_security_group_id": "sg-0aff0c4cf31e999f0",
            "subnets": [
              "subnet-07e818efc47ead25e",
              "subnet-0c250ab111711cea2"
            ],
            "tags": {
              "Name": "webserver-ha-lb"
            },
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_security_group.wp_web_serv",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_for_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:338889389996:security-group/sg-09b5668294af588fc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "172.31.16.0/20",
                  "172.31.32.0/20"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b5668294af588fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.16.0/20",
                  "172.31.32.0/20"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs-sec-group",
            "name_prefix": "",
            "owner_id": "338889389996",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "efs-sec-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c7024c188c31005"
          },
          "dependencies": [
            "aws_default_subnet.default_az1",
            "aws_default_subnet.default_az2"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_for_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:338889389996:security-group/sg-08eb2259b66585402",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "172.31.16.0/20",
                  "172.31.16.0/20"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08eb2259b66585402",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.16.0/20",
                  "172.31.32.0/20"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sec-group",
            "name_prefix": "",
            "owner_id": "338889389996",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "efs-sec-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c7024c188c31005"
          },
          "dependencies": [
            "aws_default_subnet.default_az1",
            "aws_default_subnet.default_az2"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_web_serv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:338889389996:security-group/sg-0aff0c4cf31e999f0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aff0c4cf31e999f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wp-sec-group",
            "name_prefix": "",
            "owner_id": "338889389996",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "wp-sec-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c7024c188c31005"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}